syntax = "proto3";
package jobworkerp.runner;

// internal use: notify job result to slack as next_worker
message SlackRunnerSettings {
  string bot_token = 1;
  optional string bot_name = 2;
}
